--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,14 @@
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-  text-align: center;
+    background-color: #222;
+    height: 200px;
+    padding: 20px;
+    /*color: white;*/
+    /*text-align: center;*/
+    display: flex;
+    flex-direction: column;
 }
 
 .App-intro {
