--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: #5b5959;
+    background-color: 'white';
 }
 /*#a5a9af*/
 header {
@@ -101,10 +101,10 @@ img {
     vertical-align: top
 }
 
-.trialdos {
-  /*background-color: gray;*/
-
+.userCreation {
+  text-align: center;
 }
+
 .select-style {
     padding: 0;
     margin: 0;
